[gd_scene load_steps=20 format=3 uid="uid://cwve0jsrxdksy"]

[ext_resource type="Script" path="res://partickals/fyze_sprite.gd" id="1_geego"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1.dds" id="1_r1krx"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_01.dds" id="2_deo2j"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_02.dds" id="3_rslf2"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_03.dds" id="4_5o2au"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_04.dds" id="5_v1oix"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_05.dds" id="6_nkm75"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_06.dds" id="7_8bs5g"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_07.dds" id="8_yk1lx"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_08.dds" id="9_sip7t"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_09.dds" id="10_v3xqv"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_10.dds" id="11_5cy65"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_11.dds" id="12_3p21q"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_12.dds" id="13_ucpwq"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_13.dds" id="14_mkowr"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_14.dds" id="15_2tt28"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_15.dds" id="16_ynuvy"]
[ext_resource type="Texture2D" path="res://textures/fx/fx_fire1_16.dds" id="17_w3eac"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xrk13"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_r1krx")
}, {
"duration": 1.0,
"texture": ExtResource("2_deo2j")
}, {
"duration": 1.0,
"texture": ExtResource("3_rslf2")
}, {
"duration": 1.0,
"texture": ExtResource("4_5o2au")
}, {
"duration": 1.0,
"texture": ExtResource("5_v1oix")
}, {
"duration": 1.0,
"texture": ExtResource("6_nkm75")
}, {
"duration": 1.0,
"texture": ExtResource("7_8bs5g")
}, {
"duration": 1.0,
"texture": ExtResource("8_yk1lx")
}, {
"duration": 1.0,
"texture": ExtResource("9_sip7t")
}, {
"duration": 1.0,
"texture": ExtResource("10_v3xqv")
}, {
"duration": 1.0,
"texture": ExtResource("11_5cy65")
}, {
"duration": 1.0,
"texture": ExtResource("12_3p21q")
}, {
"duration": 1.0,
"texture": ExtResource("13_ucpwq")
}, {
"duration": 1.0,
"texture": ExtResource("14_mkowr")
}, {
"duration": 1.0,
"texture": ExtResource("15_2tt28")
}, {
"duration": 1.0,
"texture": ExtResource("16_ynuvy")
}, {
"duration": 1.0,
"texture": ExtResource("17_w3eac")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="fyze_sprite" type="Node3D"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
script = ExtResource("1_geego")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
visible = false
offset = Vector2(0, 25)
sprite_frames = SubResource("SpriteFrames_xrk13")
autoplay = "default"
frame = 16
frame_progress = 1.0
speed_scale = 5.0

[node name="AnimatedSprite3D3" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-0.3, 2.62268e-08, 0, -2.62268e-08, -0.3, 0, 0, 0, 0.3, 0, -0.05, 0)
visible = false
sprite_frames = SubResource("SpriteFrames_xrk13")
autoplay = "default"
frame = 16
frame_progress = 1.0
speed_scale = 5.0

[node name="AnimatedSprite3D4" type="AnimatedSprite3D" parent="."]
transform = Transform3D(3.57746e-09, 0.3, 0, -0.3, 3.57746e-09, 0, 0, 0, 0.3, -0.02, 0, 0)
visible = false
sprite_frames = SubResource("SpriteFrames_xrk13")
autoplay = "default"
frame = 16
frame_progress = 1.0
speed_scale = 5.0

[node name="AnimatedSprite3D2" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-1.31134e-08, -0.3, 0, 0.3, -1.31134e-08, 0, 0, 0, 0.3, 0.02, 0, 0)
visible = false
sprite_frames = SubResource("SpriteFrames_xrk13")
autoplay = "default"
frame = 16
frame_progress = 1.0
speed_scale = 5.0

[node name="AnimatedSprite3D5" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.212132, -0.212132, 0, 0.212132, 0.212132, 0, 0, 0, 0.3, 0, 0, 0)
visible = false
offset = Vector2(0, 25)
sprite_frames = SubResource("SpriteFrames_xrk13")
autoplay = "default"
frame = 16
frame_progress = 1.0
speed_scale = 5.0

[node name="AnimatedSprite3D6" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-0.212132, -0.212132, 0, 0.212132, -0.212132, 0, 0, 0, 0.3, 0.02, 0, 135)
visible = false
sprite_frames = SubResource("SpriteFrames_xrk13")
autoplay = "default"
frame = 16
frame_progress = 1.0
speed_scale = 5.0

[node name="AnimatedSprite3D7" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-0.212132, 0.212132, 0, -0.212132, -0.212132, 0, 0, 0, 0.3, 0, -0.05, 0)
visible = false
sprite_frames = SubResource("SpriteFrames_xrk13")
autoplay = "default"
frame = 16
frame_progress = 1.0
speed_scale = 5.0

[node name="AnimatedSprite3D8" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.212132, 0.212132, 0, -0.212132, 0.212132, 0, 0, 0, 0.3, -0.02, 0, 0)
visible = false
sprite_frames = SubResource("SpriteFrames_xrk13")
autoplay = "default"
frame = 16
frame_progress = 1.0
speed_scale = 5.0
